--- a/index.css
+++ b/index.css
@@ -141,3 +141,22 @@ br {
   top: -3px;
   filter: opacity(100%);
 }
+
+.navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.navigation a {
+  text-decoration: none;
+}
+.navigation a:hover {
+  text-decoration: underline;
+}
+@media only screen and (max-width: 475px) {
+  .navigation {
+    flex-direction: column !important;
+    row-gap: 1rem;
+  }
+}
