--- a/index.css
+++ b/index.css
@@ -39,13 +39,21 @@ p {
   margin-bottom: 1.5rem;
 }
 
+.abbr {
+  font-family: monospace;
+  background-color: rgb(220, 220, 231);
+  padding: 1px 4px;
+  border: solid 0px;
+  border-radius: 5px;
+}
+
 .instructions ul li {
-  line-height: 1;
+  line-height: 1.3;
 }
 
 .instructions ul {
   margin-top: 0rem;
-  list-style-type: circle;
+  list-style-type: none;
 }
 
 .instructions h2 {
@@ -53,6 +61,12 @@ p {
   margin-top: 0rem;
   margin-bottom: 0.1rem;
   margin-left: 1.8rem;
+}
+.instructions h3 {
+  font-size: 1rem;
+  margin-top: 0rem;
+  margin-bottom: 0.1rem;
+  margin-left: 2rem;
 }
 
 .lists {
@@ -66,8 +80,9 @@ p {
   -webkit-box-flex-group: row;
 }
 
-@media only screen and (max-width: 475px) {
-  .lists {
+@media only screen and (max-width: 730px) {
+  .lists,
+  .vinaya {
     flex-direction: column;
   }
 }
