change to subset of the font

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Robto Serif";
-  src: url("RobotoSerif-Regular.ttf");
+  src: url("roboto-lightest.woff");
 }
 
 :root {
