--- a/index.css
+++ b/index.css
@@ -192,7 +192,7 @@ h2 .pli-lang,
 h3 .pli-lang,
 h4 .pli-lang,
 h5 .pli-lang {
-  font-family: sans-serif;
+  font-family: arial;
   color: var(--dark-gray);
 }
 
